  * Update local cdbs tweaks:
    + Add new local cdbs tweak upstream.tarball.mk to add a
      get-orig-source target and more.
    + Replace auto-update.mk with overloading buildcore.mk.
    + Emit list of suspects if new copyrights are found.
    + Check for copyrights at pre-build (at clean we might run before
      actual cleanup has finished).
    + document the tweaks in debian/README.cdbs-tweaks.
  * Resolve all build-dependencies using cdbs, and cleanup duplicates.
  * Bump up to using automake1.10 (from 1.7).
  * Bump up to using debhelper compatibility level 5 (from 4).
  * Build-depend on libxslt1-dev (and on virtual libxslt-dev only as
    fallback).
  * Add XS-Vcs-Svn and XS-Vcs-Browser fields to debian/control.
  * Move Homepage to own field (from pseudo-field in long description).

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 29 Sep 2007 15:27:17 +0200

icecast2 (2.3.1-5.1) unstable; urgency=high

  * Non-maintainer upload during BSP.
  * Fix unconditional use of passwd package in postrm (Closes: #416771).
  * Fix FTBFS due to use of obsolete curl API (Closes: #423778).

 -- Luk Claes <luk@debian.org>  Sat, 19 May 2007 14:45:18 +0200

icecast2 (2.3.1-5) unstable; urgency=low

  * Add patch to syncronize with upstream SVN as of 20060620 (r11419).
    Reasoning: No new upstream release for quite some time, and changes
    in SVN seems to only be small tightenings, not new risky features.
    + Safer use of ICECAST_VERSION_STRING.
    + Fix (void) function prototypes.
    + Fix various leaks.
    + Fail on unrecognized codec, dropping source instead of looping.
    + Improved slave handling.
    + Prevent races by locking when modifying content.
    + Fix possible bad pointer dereference when processing new clients.
    + Consistently use compat.h (and drop os.h).
  * Enable cdbs update of automake, as the above change Makefile.am's.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 19 Aug 2006 21:57:36 +0200

icecast2 (2.3.1-4) unstable; urgency=low
